@@ -2,3 +2,4 @@ Evil Mr Henry <evilmrhenry@emhsoft.com>
 Phil Bordelon <phil@thenexusproject.org>
 Adam Bark <apb_4@users.sourceforge.net>
 Max McCracken <maxstack@gmail.com>
+Brian Reid <brian@lawndartracing.com>
